--- a/Bogs.ipynb
+++ b/Bogs.ipynb
@@ -20,24 +20,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Tommy\\AppData\\Local\\Temp\\ipykernel_6212\\4045229515.py:14: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
-      "  driver = webdriver.Chrome(executable_path='./chromedriver.exe', chrome_options=chrome_options)\n",
-      "C:\\Users\\Tommy\\AppData\\Local\\Temp\\ipykernel_6212\\4045229515.py:14: DeprecationWarning: use options instead of chrome_options\n",
-      "  driver = webdriver.Chrome(executable_path='./chromedriver.exe', chrome_options=chrome_options)\n"
+      "C:\\Users\\Tommy\\AppData\\Local\\Temp\\ipykernel_8284\\3423901755.py:14: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver = webdriver.Chrome(executable_path='./cd.exe', chrome_options=chrome_options)\n",
+      "C:\\Users\\Tommy\\AppData\\Local\\Temp\\ipykernel_8284\\3423901755.py:14: DeprecationWarning: use options instead of chrome_options\n",
+      "  driver = webdriver.Chrome(executable_path='./cd.exe', chrome_options=chrome_options)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 neo classic\n"
+      "0 red\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Tommy\\AppData\\Local\\Temp\\ipykernel_6212\\4045229515.py:33: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
+      "C:\\Users\\Tommy\\AppData\\Local\\Temp\\ipykernel_8284\\3423901755.py:33: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
       "  driver.find_element_by_tag_name('body').send_keys(Keys.TAB)\n"
      ]
     },
@@ -45,15 +45,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 kids kicker\n",
-      "2 crandall ii\n",
-      "3 bmoc\n",
-      "4 4h\n",
-      "5 b moc\n",
-      "6 rainbow\n",
-      "7 women bmoc\n",
-      "8 composite toe\n",
-      "9 tie dye\n"
+      "1 blue\n",
+      "2 orange\n",
+      "3 yellow\n",
+      "4 black\n",
+      "5 brown\n",
+      "6 leather\n",
+      "7 belt\n",
+      "8 boots\n",
+      "9 shoes\n"
      ]
     }
    ],
